--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Aditya Shetty</title>
   <style>
     body {
-      font-family: Bodoni;
+      font-family: 'monospace';
       margin: 0;
       padding: 0;
       background: white;
