--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Aditya Shetty</title>
   <style>
     body {
-      font-family: 'monospace';
+      font-family: "Segoe UI", "Roboto", "Helvetica Neue", sans-serif;
       margin: 0;
       padding: 0;
       background: white;
