--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     }
 
     body {
-      font-family: "Times New Roman", Times, sans-serif;
-      line-height: 1.0;
+      font-family: 'Roboto', 'Open Sans', 'Montserrat', sans-serif;
+      line-height: 1.6;
       color: black;
-      background: gray;
+      background: white;
     }
 
     .container {
-      max-width: 1000px;
+      max-width: 1200px;
       margin: 0 auto;
       background: white;
-      box-shadow: 0 0 20px gray;
+      box-shadow: 0 0 10px green;
     }
 
     header {
-      background: green;
+      background: black;
       color: white;
       padding: 2rem;
       text-align: center;
@@ -42,7 +42,8 @@
     }
 
     nav {
-      background: darkgreen;
+      background: white;
+      border-bottom: 2px solid black;
       padding: 0;
       text-align: center;
     }
@@ -50,19 +51,21 @@
     nav a {
       display: inline-block;
       padding: 1rem 1.5rem;
-      color: white;
+      color: black;
       text-decoration: none;
       font-weight: bold;
-      transition: background 0.3s;
+      border-bottom: 3px solid transparent;
+      transition: all 0.3s;
     }
 
     nav a:hover {
-      background: green;
+      border-bottom-color: green;
+      color: green;
     }
 
     section {
       padding: 2.5rem 2rem;
-      border-bottom: 2px solid lightgray;
+      border-bottom: 1px solid lightgray;
     }
 
     section:last-of-type {
@@ -72,8 +75,8 @@
     h2 {
       font-size: 2rem;
       margin-bottom: 1.5rem;
-      color: darkgreen;
-      border-bottom: 3px solid gray;
+      color: black;
+      border-bottom: 2px solid black;
       padding-bottom: 0.5rem;
       display: inline-block;
     }
@@ -87,33 +90,30 @@
 
     .box {
       background: white;
-      border: 2px solid gray;
-      border-radius: 8px;
+      border: 1px solid black;
       padding: 1.5rem;
       transition: all 0.3s;
-      box-shadow: 0 2px 8px lightgray;
     }
 
     .box:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 5px 15px gray;
-      border-color: darkgreen;
+      box-shadow: 0 5px 10px lightgreen;
+      border-color: green;
     }
 
     .box h3 {
-      color: darkgreen;
+      color: black;
       margin-bottom: 0.5rem;
       font-size: 1.3rem;
     }
 
     .box h4 {
-      color: green;
+      color: black;
       margin-bottom: 1rem;
       font-size: 1.1rem;
     }
 
     .box strong {
-      color: darkgreen;
+      color: black;
       font-size: 1.1rem;
     }
 
@@ -123,14 +123,13 @@
     }
 
     .box a {
-      color: darkgreen;
-      text-decoration: none;
+      color: black;
+      text-decoration: underline;
       word-break: break-all;
     }
 
     .box a:hover {
-      text-decoration: underline;
-      color: darkgreen;
+      color: green;
     }
 
     .box ul {
@@ -144,7 +143,7 @@
     }
 
     #about {
-      background: lightgreen;
+      background: lightgray;
       text-align: center;
     }
 
@@ -160,7 +159,7 @@
     }
 
     .contact {
-      background: green;
+      background: lightgray;
     }
 
     .contact form {
@@ -171,23 +170,22 @@
     .contact label {
       display: block;
       margin-bottom: 1rem;
-      color: darkgreen;
+      color: black;
       font-weight: bold;
     }
 
     .contact input, .contact textarea {
       width: 100%;
       padding: 0.8rem;
-      border: 2px solid green;
-      border-radius: 5px;
+      border: 1px solid black;
       font-size: 1rem;
       margin-top: 0.5rem;
+      background: white;
     }
 
     .contact input:focus, .contact textarea:focus {
       outline: none;
-      border-color: darkgreen;
-      background: lightgreen;
+      border-color: green;
     }
 
     .contact textarea {
@@ -196,11 +194,10 @@
     }
 
     .contact button {
-      background: green;
+      background: black;
       color: white;
       border: none;
       padding: 1rem 2rem;
-      border-radius: 5px;
       font-size: 1rem;
       font-weight: bold;
       cursor: pointer;
@@ -209,8 +206,7 @@
     }
 
     .contact button:hover {
-      background: darkgreen;
-      transform: translateY(-2px);
+      background: green;
     }
 
     footer {
@@ -313,7 +309,7 @@
         <div class="box">
           <h3>Project Two</h3>
           <h4><strong>Budgeting App</strong></h4>
-          <p><a href="https://adityashett.github.io/BudgetTraacker/" target="_blank">https://adityashett.github.io/BudgetTracker/</a></p>
+          <p><a href="https://adityashett.github.io/BudgetTracker/" target="_blank">https://adityashett.github.io/BudgetTracker/</a></p>
           <p><strong>HTML/CSS/JavaScript, DOM Manipulation</strong></p>
           <li>Developed comprehensive single-page application using vanilla JavaScript with modular state management</li>
           <li>Implemented dynamic data visualization using Chart.js for budget allocation pie charts and spending trend analysis</li>
