--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       max-width: 1200px;
       margin: 0 auto;
       background: white;
-      box-shadow: 0 0 10px green;
+      box-shadow: 0 0 10px black;
     }
 
     header {
@@ -273,24 +273,12 @@
         </div>
         <div class="box">
           <strong>Web</strong>
-          <p>HTML, CSS, JavaScript, PHP, ASP.NET</p>
+          <p>HTML, CSS, JavaScript, PHP</p>
         </div>
         <div class="box">
           <strong>Tools</strong>
-          <p>Git, Unix, Unity, VSCode</p>
+          <p>Git, Unix, Unity, VSCode, MYSQL, SQL</p>
         </div>
-      </div>
-    </section>
-
-    <section id="experience">
-      <h2>Experience</h2>
-        <h3>Online Support Specialist</h3>
-        <p>Homelife Miracle, Apr 2023 – Sep 2024</p>
-        <ul>
-            <li>Managed client-to-broker communications, ensuring smooth interactions.</li>
-            <li>Coordinated booking of services and appointments for prospective clients.</li>
-            <li>Built strong networking relationships with brokers across the GTA.</li>
-        </ul>
       </div>
     </section>
 
@@ -326,6 +314,18 @@
           <li>Created intelligent web scraping pipeline using BeautifulSoup and DuckDuckGo search integration for real-time data retrieval</li>
           <li>Built robust data processing engine with pandas DataFrame manipulation and matplotlib rendering for publication-ready visualizations</li>
         </div>
+      </div>
+    </section>
+
+    <section id="experience">
+      <h2>Experience</h2>
+        <h3>Online Support Specialist</h3>
+        <p>Homelife Miracle, Apr 2023 – Sep 2024</p>
+        <ul>
+            <li>Managed client-to-broker communications, ensuring smooth interactions.</li>
+            <li>Coordinated booking of services and appointments for prospective clients.</li>
+            <li>Built strong networking relationships with brokers across the GTA.</li>
+        </ul>
       </div>
     </section>
 
